--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 basic_settings:
   site_title: Jessie Pease
-  site_tagline: Travel Blog & Resume
+  site_tagline: Code. Travel. Create.
   favicon_image: /images/mainprofile.jpg
 
 header_settings:
@@ -36,7 +36,7 @@ social_settings:
   dribbble_url: ''
   behance_url: ''
   deviantart_url: ''
-  github_url: ''
+  github_url: 'https://github.com/jessiepease'
   reddit_url: ''
   flickr_url: ''
   etsy_url: ''
