--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 basic_settings:
   site_title: Jessie Pease
-  site_tagline: Code. Travel. Create.
+  site_tagline: Code Travel Create
   favicon_image: /images/mainprofile.jpg
 
 header_settings:
