update instagram account name

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -21,7 +21,7 @@ grid_settings:
 social_settings:
   facebook_url: ''
   twitter_url: ''
-  instagram_url: 'https://www.instagram.com/please_noel/'
+  instagram_url: 'https://www.instagram.com/jessie.pease/'
   snapchat_url: ''
   youtube_url: ''
   google-plus_url: ''
